# deez-codon

./: .editorconfig  .gitmodules  PairedEnd.codon  README.md  SequenceCompressor.codon  SequenceDecompressor.codon  compress.codon  decompress.py  deez.patch  meson.build  sequence.codon  sequence.py
ac/: arithmetic_coder.codon  internals.codon  order_0.codon  order_2.codon
ac/tests/: arithmetic-coder.cpp
